<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".adminActivity.AdminHomepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar

            android:id="@+id/app_bar"
            style="@style/Widget.AppCompat.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/Widget.AppCompat.Toolbar"
            app:title=" "
            />

        <TextView
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Admin HOMEPAGE"
            android:background="@color/colorAccent">
        </TextView>

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="3dp"
        app:srcCompat="@drawable/shr_logo" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="6sp"
            android:padding="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeAdmin"
        android:textSize="15sp"
        android:padding="15dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="243dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/approveText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="15dp"
                android:text="@string/approve"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/approveButton"
                style="@style/Widget.AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/approveText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="-3dp"
                android:layout_marginEnd="233dp"
                android:layout_marginRight="233dp"
                android:text="Go approve"
                android:textSize="8dp" />

            <TextView
                android:id="@+id/checkInternship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/approveButton"
                android:layout_marginTop="12dp"
                android:padding="15dp"
                android:text="@string/allInternships"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/allInternships"
                style="@style/Widget.AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkInternship"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="-5dp"
                android:text="All Internships"
                android:textSize="8dp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>