<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="6dp">

         <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="6dp"
            app:srcCompat="@drawable/shr_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="55dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="6sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_text"
            android:layout_width="match_parent"
            style="@style/Widget.AppTheme.TextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/shr_hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:textSize="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/shr_hint_password"
            style="@style/Widget.AppTheme.TextInputLayout"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:textSize="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Widget.AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="67dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text="Login"
                android:textSize="8dp" />

            <TextView
                style="@style/Widget.AppTheme.TextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                android:layout_toStartOf="@id/register_button"
                android:layout_toLeftOf="@id/register_button"
                android:text="Not register yet?"
                android:textAllCaps="true"
                android:textSize="10sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                style="@style/Widget.AppTheme.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-84dp"
                android:layout_marginRight="-84dp"
                android:layout_toStartOf="@id/login_button"
                android:layout_toLeftOf="@id/login_button"
                android:text="Register"
                android:textSize="8dp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
