<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="6dp">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="6dp"
            app:srcCompat="@drawable/shr_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="55dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="6sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            style="@style/Widget.AppTheme.TextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="First Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameEdit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:textSize="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            style="@style/Widget.AppTheme.TextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Last Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameEdit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:textSize="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="match_parent"
            style="@style/Widget.AppTheme.TextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressEdit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:textSize="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            style="@style/Widget.AppTheme.TextInputLayout"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:counterOverflowTextAppearance="@color/textColorPrimary"
            app:counterTextAppearance="@color/textColorPrimary"
            android:layout_marginBottom="10dp"
            android:hint="Phone Number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberEdit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="phone"
                android:textSize="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        style="@style/Widget.AppTheme.TextInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:textSize="10dp"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            style="@style/Widget.AppTheme.TextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Date Of Birth">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateOfBirthEdit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="datetime"
                android:textSize="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            style="@style/Widget.AppTheme.TextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/shr_hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:textSize="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/shr_hint_password"
            style="@style/Widget.AppTheme.TextInputLayout"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:textSize="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

       <Spinner
           android:id="@+id/spinnerRole"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                style="@style/Widget.AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text="Register"
                android:textSize="8dp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
